exports[`test CaseStudyForm renders 1`] = `
<div
  className="layout">
  <header>
    <h1
      aria-describedby="header-description"
      tabIndex="-1">
      Add
       case study
    </h1>
    <p
      id="header-description">
      To be successfully evaluated, your case study must meet the 
       
      <a
        href="/evaluation-criteria"
        rel="external"
        target="_blank">
        evaluation criteria
      </a>
    </p>
  </header>
  <article
    role="main">
    <form
      action={undefined}
      id="casestudy__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="title">
          Give your case study a title
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="title"
          maxLength={undefined}
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="client">
          Who was the client?
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="client"
          maxLength={undefined}
          name="client"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="timeframe">
          What was the time frame?
        </label>
        <p
          className="hint"
          id="timeframe-hint">
          For example,  January 2016 — June 2016
        </p>
        <input
          aria-describedby="timeframe-hint"
          className=""
          id="timeframe"
          maxLength={undefined}
          name="timeframe"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="opportunity">
          Outline the problem or opportunity
        </label>
        <p
          className="hint"
          id="opportunity-hint">
          Describe the project goal and any relevant background information.
        </p>
        <div>
          <textarea
            aria-describedby="opportunity-hint"
            className="under-200"
            defaultValue=""
            id="opportunity"
            name="opportunity"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]} />
          <span
            className="word-count-counter">
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="roles">
          What was your business responsible for?
        </label>
        <p
          className="hint"
          id="roles-hint">
          e.g. Ran whole project, engaged in discovery activites or responsible for delivery.
        </p>
        <input
          aria-describedby="roles-hint"
          className=""
          id="roles"
          maxLength={undefined}
          name="roles"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="approach">
          Describe your approach
        </label>
        <p
          className="hint"
          id="approach-hint">
          How did your capabilities and methods contribute to achieving the project goals?
        </p>
        <div>
          <textarea
            aria-describedby="approach-hint"
            className="under-200"
            defaultValue=""
            id="approach"
            name="approach"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]} />
          <span
            className="word-count-counter">
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field">
        <label
          htmlFor="outcome">
          What was the outcome?
        </label>
        <p
          className="hint"
          id="outcome-hint">
          List the key achievements of this project.
        </p>
        <div>
          <div
            className="list-entry row">
            <div
              className="col-xs-12 col-sm-9">
              <label
                className="text-box-number-label"
                htmlFor="outcome">
                1
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue=""
                id="outcome"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text" />
            </div>
          </div>
          <div
            className="list-entry row">
            <div
              className="col-xs-12 col-sm-9">
              <label
                className="text-box-number-label"
                htmlFor="outcome-1">
                2
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue=""
                id="outcome-1"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text" />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button">
              remove 
              <span
                className="visuallyhidden">
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button">
            Add another row
          </button>
        </div>
      </div>
      <div
        className="field">
        <label
          htmlFor="project_links">
          Project links (optional)
        </label>
        <p
          className="hint"
          id="project_links-hint">
          Link to any supporting material for your case study. This can include a case study on your  website, case study video or the live project.
        </p>
        <div>
          <div
            className="list-entry row">
            <div
              className="col-xs-12 col-sm-9">
              <label
                className="text-box-number-label"
                htmlFor="project_links">
                1
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text" />
            </div>
          </div>
          <div
            className="list-entry row">
            <div
              className="col-xs-12 col-sm-9">
              <label
                className="text-box-number-label"
                htmlFor="project_links-1">
                2
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-1"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text" />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button">
              remove 
              <span
                className="visuallyhidden">
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button">
            Add another row
          </button>
        </div>
      </div>
      <h3>
        Referee
      </h3>
      <p>
        Client referee information will only be viewed by evaluators.  It will not be published anywhere on the marketplace.
      </p>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="refereeName">
          Referee\'s name
        </label>
        <p
          className="hint"
          id="refereeName-hint">
          The full name of the best person to contact about your experience
        </p>
        <input
          aria-describedby="refereeName-hint"
          className=""
          id="refereeName"
          maxLength={undefined}
          name="refereeName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="refereeEmail">
          Referee\'s phone number
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="refereeEmail"
          maxLength={undefined}
          name="refereeEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div>
        <input
          checked={false}
          id="refereeContact"
          name="refereeContact"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox" />
        <label
          htmlFor="refereeContact">
          I acknowledge my reference gives permission to be contacted and have their information be shared within the Digtal Transformation Agency for evaluation.
        </label>
      </div>
      <input
        role="button"
        type="submit"
        value="Publish Case Study" />
    </form>
  </article>
</div>
`;

exports[`test CaseStudyForm renders a populated reference page 1`] = `
<div>
  <div
    className="layout">
    <header>
      <h1
        aria-describedby="header-description"
        tabIndex="-1">
        Reference for 
        case study
      </h1>
      <p
        id="header-description">
        Show the range of skills and experience you can provide by completing the form below.
      </p>
    </header>
    <div
      className="row">
      <div
        className="col-xs-12 col-sm-4">
        <aside>
          <nav
            className="local-nav step-navigation">
            <ul>
              <li>
                <a
                  className=""
                  href="/"
                  onClick={[Function]}
                  role={undefined}>
                  Add case study
                  <i
                    aria-hidden="true"
                    className="fa fa-check green" />
                </a>
              </li>
              <li>
                <a
                  className="is-active is-current"
                  href="/reference"
                  onClick={[Function]}
                  role={undefined}>
                  Add reference
                </a>
              </li>
            </ul>
          </nav>
        </aside>
      </div>
      <article
        className="col-xs-12 col-sm-8"
        role="main">
        <span />
        <form
          action="https://httpbin.org/post"
          id="casestudy__create"
          method="post"
          onReset={[Function]}
          onSubmit={[Function]}>
          <input
            id="csrf_token"
            name="csrf_token"
            type="hidden"
            value="somecsrftoken" />
          <input
            name="opportunity"
            type="hidden"
            value="The opportunity" />
          <input
            name="client"
            type="hidden"
            value="The Client Name" />
          <input
            name="timeframe"
            type="hidden"
            value="January 2016 — June 2016" />
          <input
            name="approach"
            type="hidden"
            value="The approach" />
          <input
            name="outcome[]"
            type="hidden"
            value="Outcome 1" />
          <input
            name="outcome[]"
            type="hidden"
            value="Outcome 2" />
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="name">
              Full name (optional)
            </label>
            <p
              className="hint"
              id="name-hint">
              Add the full name of the person who has agreed to be your reference.
            </p>
            <input
              aria-describedby="name-hint"
              className=""
              id="name"
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="Your full name" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="role">
              Role and place to work (optional)
            </label>
            <p
              className="hint"
              id="role-hint">
              For example,  Delivery Manager, Digital Transformation Agency.
            </p>
            <input
              aria-describedby="role-hint"
              className=""
              id="role"
              name="role"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="phone">
              Phone number (optional)
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="phone"
              name="phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="email">
              Email (optional)
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <input
              checked={false}
              id="permission"
              name="permission"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              type="checkbox" />
            <label
              htmlFor="permission">
              I acknowledge my reference gives permission to be contacted and have their details shared in the Digital Marketplace.
            </label>
          </div>
          <div
            className="field">
            <input
              checked={false}
              id="acknowledge"
              name="acknowledge"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              type="checkbox" />
            <label
              htmlFor="acknowledge">
              I acknowledge this case study may be shared with registered buyers in the Digital Marketplace.
            </label>
          </div>
          <input
            onClick={[Function]}
            role="button"
            type="submit"
            value="Publish case study" />
        </form>
        <a
          href="http://www.right.back/to/where/you/came/from">
          Return without saving
        </a>
      </article>
    </div>
  </div>
</div>
`;

exports[`test CaseStudyForm renders an empty reference page 1`] = `
<div>
  <div
    className="layout">
    <header>
      <h1
        aria-describedby="header-description"
        tabIndex="-1">
        Reference for 
        case study
      </h1>
      <p
        id="header-description">
        Show the range of skills and experience you can provide by completing the form below.
      </p>
    </header>
    <div
      className="row">
      <div
        className="col-xs-12 col-sm-4">
        <aside>
          <nav
            className="local-nav step-navigation">
            <ul>
              <li>
                <a
                  className=""
                  href="/"
                  onClick={[Function]}
                  role={undefined}>
                  Add case study
                  <i
                    aria-hidden="true"
                    className="fa fa-check green" />
                </a>
              </li>
              <li>
                <a
                  className="is-active is-current"
                  href="/reference"
                  onClick={[Function]}
                  role={undefined}>
                  Add reference
                </a>
              </li>
            </ul>
          </nav>
        </aside>
      </div>
      <article
        className="col-xs-12 col-sm-8"
        role="main">
        <span />
        <form
          action={undefined}
          id="casestudy__create"
          method="post"
          onReset={[Function]}
          onSubmit={[Function]}>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="name">
              Full name (optional)
            </label>
            <p
              className="hint"
              id="name-hint">
              Add the full name of the person who has agreed to be your reference.
            </p>
            <input
              aria-describedby="name-hint"
              className=""
              id="name"
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="role">
              Role and place to work (optional)
            </label>
            <p
              className="hint"
              id="role-hint">
              For example,  Delivery Manager, Digital Transformation Agency.
            </p>
            <input
              aria-describedby="role-hint"
              className=""
              id="role"
              name="role"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="phone">
              Phone number (optional)
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="phone"
              name="phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="email">
              Email (optional)
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <input
              checked={false}
              id="permission"
              name="permission"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              type="checkbox" />
            <label
              htmlFor="permission">
              I acknowledge my reference gives permission to be contacted and have their details shared in the Digital Marketplace.
            </label>
          </div>
          <div
            className="field">
            <input
              checked={false}
              id="acknowledge"
              name="acknowledge"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              type="checkbox" />
            <label
              htmlFor="acknowledge">
              I acknowledge this case study may be shared with registered buyers in the Digital Marketplace.
            </label>
          </div>
          <input
            onClick={[Function]}
            role="button"
            type="submit"
            value="Publish case study" />
        </form>
      </article>
    </div>
  </div>
</div>
`;

exports[`test CaseStudyForm renders an empty reference page in edit mode 1`] = `
<div>
  <div
    className="layout">
    <header>
      <h1
        aria-describedby="header-description"
        tabIndex="-1">
        Reference for 
        case study
      </h1>
      <p
        id="header-description">
        Show the range of skills and experience you can provide by completing the form below.
      </p>
    </header>
    <div
      className="row">
      <div
        className="col-xs-12 col-sm-4">
        <aside>
          <nav
            className="local-nav step-navigation">
            <ul>
              <li>
                <a
                  className=""
                  href="/"
                  onClick={[Function]}
                  role={undefined}>
                  Add case study
                  <i
                    aria-hidden="true"
                    className="fa fa-check green" />
                </a>
              </li>
              <li>
                <a
                  className="is-active is-current"
                  href="/reference"
                  onClick={[Function]}
                  role={undefined}>
                  Add reference
                </a>
              </li>
            </ul>
          </nav>
        </aside>
      </div>
      <article
        className="col-xs-12 col-sm-8"
        role="main">
        <span />
        <form
          action={undefined}
          id="casestudy__create"
          method="post"
          onReset={[Function]}
          onSubmit={[Function]}>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="name">
              Full name (optional)
            </label>
            <p
              className="hint"
              id="name-hint">
              Add the full name of the person who has agreed to be your reference.
            </p>
            <input
              aria-describedby="name-hint"
              className=""
              id="name"
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="role">
              Role and place to work (optional)
            </label>
            <p
              className="hint"
              id="role-hint">
              For example,  Delivery Manager, Digital Transformation Agency.
            </p>
            <input
              aria-describedby="role-hint"
              className=""
              id="role"
              name="role"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="phone">
              Phone number (optional)
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="phone"
              name="phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="email">
              Email (optional)
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <input
              checked={false}
              id="permission"
              name="permission"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              type="checkbox" />
            <label
              htmlFor="permission">
              I acknowledge my reference gives permission to be contacted and have their details shared in the Digital Marketplace.
            </label>
          </div>
          <div
            className="field">
            <input
              checked={false}
              id="acknowledge"
              name="acknowledge"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              type="checkbox" />
            <label
              htmlFor="acknowledge">
              I acknowledge this case study may be shared with registered buyers in the Digital Marketplace.
            </label>
          </div>
          <input
            onClick={[Function]}
            role="button"
            type="submit"
            value="Update case study" />
        </form>
      </article>
    </div>
  </div>
</div>
`;

exports[`test CaseStudyForm renders empty in edit mode 1`] = `
<div
  className="layout">
  <header>
    <h1
      aria-describedby="header-description"
      tabIndex="-1">
      Edit
       case study
    </h1>
    <p
      id="header-description">
      To be successfully evaluated, your case study must meet the 
       
      <a
        href="/evaluation-criteria"
        rel="external"
        target="_blank">
        evaluation criteria
      </a>
    </p>
  </header>
  <article
    role="main">
    <form
      action={undefined}
      id="casestudy__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="title">
          Give your case study a title
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="title"
          maxLength={undefined}
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="client">
          Who was the client?
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="client"
          maxLength={undefined}
          name="client"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="timeframe">
          What was the time frame?
        </label>
        <p
          className="hint"
          id="timeframe-hint">
          For example,  January 2016 — June 2016
        </p>
        <input
          aria-describedby="timeframe-hint"
          className=""
          id="timeframe"
          maxLength={undefined}
          name="timeframe"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="opportunity">
          Outline the problem or opportunity
        </label>
        <p
          className="hint"
          id="opportunity-hint">
          Describe the project goal and any relevant background information.
        </p>
        <div>
          <textarea
            aria-describedby="opportunity-hint"
            className="under-200"
            defaultValue=""
            id="opportunity"
            name="opportunity"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]} />
          <span
            className="word-count-counter">
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="roles">
          What was your business responsible for?
        </label>
        <p
          className="hint"
          id="roles-hint">
          e.g. Ran whole project, engaged in discovery activites or responsible for delivery.
        </p>
        <input
          aria-describedby="roles-hint"
          className=""
          id="roles"
          maxLength={undefined}
          name="roles"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="approach">
          Describe your approach
        </label>
        <p
          className="hint"
          id="approach-hint">
          How did your capabilities and methods contribute to achieving the project goals?
        </p>
        <div>
          <textarea
            aria-describedby="approach-hint"
            className="under-200"
            defaultValue=""
            id="approach"
            name="approach"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]} />
          <span
            className="word-count-counter">
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field">
        <label
          htmlFor="outcome">
          What was the outcome?
        </label>
        <p
          className="hint"
          id="outcome-hint">
          List the key achievements of this project.
        </p>
        <div>
          <div
            className="list-entry row">
            <div
              className="col-xs-12 col-sm-9">
              <label
                className="text-box-number-label"
                htmlFor="outcome">
                1
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue=""
                id="outcome"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text" />
            </div>
          </div>
          <div
            className="list-entry row">
            <div
              className="col-xs-12 col-sm-9">
              <label
                className="text-box-number-label"
                htmlFor="outcome-1">
                2
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue=""
                id="outcome-1"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text" />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button">
              remove 
              <span
                className="visuallyhidden">
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button">
            Add another row
          </button>
        </div>
      </div>
      <div
        className="field">
        <label
          htmlFor="project_links">
          Project links (optional)
        </label>
        <p
          className="hint"
          id="project_links-hint">
          Link to any supporting material for your case study. This can include a case study on your  website, case study video or the live project.
        </p>
        <div>
          <div
            className="list-entry row">
            <div
              className="col-xs-12 col-sm-9">
              <label
                className="text-box-number-label"
                htmlFor="project_links">
                1
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text" />
            </div>
          </div>
          <div
            className="list-entry row">
            <div
              className="col-xs-12 col-sm-9">
              <label
                className="text-box-number-label"
                htmlFor="project_links-1">
                2
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-1"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text" />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button">
              remove 
              <span
                className="visuallyhidden">
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button">
            Add another row
          </button>
        </div>
      </div>
      <h3>
        Referee
      </h3>
      <p>
        Client referee information will only be viewed by evaluators.  It will not be published anywhere on the marketplace.
      </p>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="refereeName">
          Referee\'s name
        </label>
        <p
          className="hint"
          id="refereeName-hint">
          The full name of the best person to contact about your experience
        </p>
        <input
          aria-describedby="refereeName-hint"
          className=""
          id="refereeName"
          maxLength={undefined}
          name="refereeName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="refereeEmail">
          Referee\'s phone number
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="refereeEmail"
          maxLength={undefined}
          name="refereeEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div>
        <input
          checked={false}
          id="refereeContact"
          name="refereeContact"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox" />
        <label
          htmlFor="refereeContact">
          I acknowledge my reference gives permission to be contacted and have their information be shared within the Digtal Transformation Agency for evaluation.
        </label>
      </div>
      <input
        role="button"
        type="submit"
        value="Save Changes" />
    </form>
    <a
      href="http://www.right.back/to/where/you/came/from">
      Return without saving
    </a>
  </article>
</div>
`;

exports[`test CaseStudyForm renders with errors 1`] = `
<div
  className="layout">
  <header>
    <h1
      aria-describedby="header-description"
      tabIndex="-1">
      Add
       case study
    </h1>
    <p
      id="header-description">
      To be successfully evaluated, your case study must meet the 
       
      <a
        href="/evaluation-criteria"
        rel="external"
        target="_blank">
        evaluation criteria
      </a>
    </p>
  </header>
  <article
    role="main">
    <div
      aria-describedby="validation-masthead-heading"
      className="callout--warning"
      role="alert"
      tabIndex="-1">
      <h4
        id="validation-masthead-heading">
        There was a problem with the details you gave
      </h4>
      <ul>
        <li>
          <a
            href="#title">
            Title is required
          </a>
        </li>
        <li>
          <a
            href="#client">
            Client is required
          </a>
        </li>
        <li>
          <a
            href="#timeframe">
            Timeframe is required
          </a>
        </li>
        <li>
          <a
            href="#opportunity">
            You must outline the opportunity
          </a>
        </li>
        <li>
          <a
            href="#roles">
            You must specify the roles you provided
          </a>
        </li>
        <li>
          <a
            href="#approach">
            You must outline your approach
          </a>
        </li>
        <li>
          <a
            href="#outcome">
            You must provide at least one outcome.
          </a>
        </li>
        <li>
          <a
            href="#refereeName">
            Please provide a referee name.
          </a>
        </li>
        <li>
          <a
            href="#refereeEmail">
            Please provide a referee phone number.
          </a>
        </li>
        <li>
          <a
            href="#refereeContact">
            Please ackknowledge the referee can be contacted.
          </a>
        </li>
      </ul>
    </div>
    <form
      action="/foo/bar"
      id="casestudy__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken" />
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="title">
          Give your case study a title
        </label>
        <a
          className="validation-message"
          href="#title">
          <span
            className="visuallyhidden">
            Validation Error: 
          </span>
          <span>
            Title is required
          </span>
        </a>
        <input
          aria-describedby={undefined}
          className="invalid"
          id="title"
          maxLength={undefined}
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="client">
          Who was the client?
        </label>
        <a
          className="validation-message"
          href="#client">
          <span
            className="visuallyhidden">
            Validation Error: 
          </span>
          <span>
            Client is required
          </span>
        </a>
        <input
          aria-describedby={undefined}
          className="invalid"
          id="client"
          maxLength={undefined}
          name="client"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="timeframe">
          What was the time frame?
        </label>
        <p
          className="hint"
          id="timeframe-hint">
          For example,  January 2016 — June 2016
        </p>
        <a
          className="validation-message"
          href="#timeframe">
          <span
            className="visuallyhidden">
            Validation Error: 
          </span>
          <span>
            Timeframe is required
          </span>
        </a>
        <input
          aria-describedby="timeframe-hint"
          className="invalid"
          id="timeframe"
          maxLength={undefined}
          name="timeframe"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="opportunity">
          Outline the problem or opportunity
        </label>
        <p
          className="hint"
          id="opportunity-hint">
          Describe the project goal and any relevant background information.
        </p>
        <a
          className="validation-message"
          href="#opportunity">
          <span
            className="visuallyhidden">
            Validation Error: 
          </span>
          <span>
            You must outline the opportunity
          </span>
        </a>
        <div>
          <textarea
            aria-describedby="opportunity-hint"
            className="invalid under-200"
            defaultValue=""
            id="opportunity"
            name="opportunity"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]} />
          <span
            className="word-count-counter">
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="roles">
          What was your business responsible for?
        </label>
        <p
          className="hint"
          id="roles-hint">
          e.g. Ran whole project, engaged in discovery activites or responsible for delivery.
        </p>
        <a
          className="validation-message"
          href="#roles">
          <span
            className="visuallyhidden">
            Validation Error: 
          </span>
          <span>
            You must specify the roles you provided
          </span>
        </a>
        <input
          aria-describedby="roles-hint"
          className="invalid"
          id="roles"
          maxLength={undefined}
          name="roles"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="approach">
          Describe your approach
        </label>
        <p
          className="hint"
          id="approach-hint">
          How did your capabilities and methods contribute to achieving the project goals?
        </p>
        <a
          className="validation-message"
          href="#approach">
          <span
            className="visuallyhidden">
            Validation Error: 
          </span>
          <span>
            You must outline your approach
          </span>
        </a>
        <div>
          <textarea
            aria-describedby="approach-hint"
            className="invalid under-200"
            defaultValue=""
            id="approach"
            name="approach"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]} />
          <span
            className="word-count-counter">
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field">
        <label
          htmlFor="outcome">
          What was the outcome?
        </label>
        <p
          className="hint"
          id="outcome-hint">
          List the key achievements of this project.
        </p>
        <a
          className="validation-message"
          href="#outcome">
          <span
            className="visuallyhidden">
            Validation Error: 
          </span>
          <span>
            You must provide at least one outcome.
          </span>
        </a>
        <div>
          <div
            className="list-entry row">
            <div
              className="col-xs-12 col-sm-9">
              <label
                className="text-box-number-label"
                htmlFor="outcome">
                1
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box invalid"
                defaultValue=""
                id="outcome"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text" />
            </div>
          </div>
          <div
            className="list-entry row">
            <div
              className="col-xs-12 col-sm-9">
              <label
                className="text-box-number-label"
                htmlFor="outcome-1">
                2
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box invalid"
                defaultValue=""
                id="outcome-1"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text" />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button">
              remove 
              <span
                className="visuallyhidden">
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button">
            Add another row
          </button>
        </div>
      </div>
      <div
        className="field">
        <label
          htmlFor="project_links">
          Project links (optional)
        </label>
        <p
          className="hint"
          id="project_links-hint">
          Link to any supporting material for your case study. This can include a case study on your  website, case study video or the live project.
        </p>
        <div>
          <div
            className="list-entry row">
            <div
              className="col-xs-12 col-sm-9">
              <label
                className="text-box-number-label"
                htmlFor="project_links">
                1
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text" />
            </div>
          </div>
          <div
            className="list-entry row">
            <div
              className="col-xs-12 col-sm-9">
              <label
                className="text-box-number-label"
                htmlFor="project_links-1">
                2
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-1"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text" />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button">
              remove 
              <span
                className="visuallyhidden">
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button">
            Add another row
          </button>
        </div>
      </div>
      <h3>
        Referee
      </h3>
      <p>
        Client referee information will only be viewed by evaluators.  It will not be published anywhere on the marketplace.
      </p>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="refereeName">
          Referee\'s name
        </label>
        <p
          className="hint"
          id="refereeName-hint">
          The full name of the best person to contact about your experience
        </p>
        <a
          className="validation-message"
          href="#refereeName">
          <span
            className="visuallyhidden">
            Validation Error: 
          </span>
          <span>
            Please provide a referee name.
          </span>
        </a>
        <input
          aria-describedby="refereeName-hint"
          className="invalid"
          id="refereeName"
          maxLength={undefined}
          name="refereeName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="refereeEmail">
          Referee\'s phone number
        </label>
        <a
          className="validation-message"
          href="#refereeEmail">
          <span
            className="visuallyhidden">
            Validation Error: 
          </span>
          <span>
            Please provide a referee phone number.
          </span>
        </a>
        <input
          aria-describedby={undefined}
          className="invalid"
          id="refereeEmail"
          maxLength={undefined}
          name="refereeEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div>
        <a
          className="validation-message"
          href="#refereeContact">
          <span
            className="visuallyhidden">
            Validation Error: 
          </span>
          <span>
            Please ackknowledge the referee can be contacted.
          </span>
        </a>
        <input
          checked={false}
          id="refereeContact"
          name="refereeContact"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox" />
        <label
          htmlFor="refereeContact">
          I acknowledge my reference gives permission to be contacted and have their information be shared within the Digtal Transformation Agency for evaluation.
        </label>
      </div>
      <input
        role="button"
        type="submit"
        value="Publish Case Study" />
    </form>
  </article>
</div>
`;

exports[`test CaseStudyForm renders with form_options 1`] = `
<div
  className="layout">
  <header>
    <h1
      aria-describedby="header-description"
      tabIndex="-1">
      Add
       case study
    </h1>
    <p
      id="header-description">
      To be successfully evaluated, your case study must meet the 
       
      <a
        href="/evaluation-criteria"
        rel="external"
        target="_blank">
        evaluation criteria
      </a>
    </p>
  </header>
  <article
    role="main">
    <form
      action="/foo/bar"
      id="casestudy__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <input
        id="csrf_token"
        name="csrf_token"
        type="hidden"
        value="sometoken" />
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="title">
          Give your case study a title
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="title"
          maxLength={undefined}
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="client">
          Who was the client?
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="client"
          maxLength={undefined}
          name="client"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="timeframe">
          What was the time frame?
        </label>
        <p
          className="hint"
          id="timeframe-hint">
          For example,  January 2016 — June 2016
        </p>
        <input
          aria-describedby="timeframe-hint"
          className=""
          id="timeframe"
          maxLength={undefined}
          name="timeframe"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="opportunity">
          Outline the problem or opportunity
        </label>
        <p
          className="hint"
          id="opportunity-hint">
          Describe the project goal and any relevant background information.
        </p>
        <div>
          <textarea
            aria-describedby="opportunity-hint"
            className="under-200"
            defaultValue=""
            id="opportunity"
            name="opportunity"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]} />
          <span
            className="word-count-counter">
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="roles">
          What was your business responsible for?
        </label>
        <p
          className="hint"
          id="roles-hint">
          e.g. Ran whole project, engaged in discovery activites or responsible for delivery.
        </p>
        <input
          aria-describedby="roles-hint"
          className=""
          id="roles"
          maxLength={undefined}
          name="roles"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="approach">
          Describe your approach
        </label>
        <p
          className="hint"
          id="approach-hint">
          How did your capabilities and methods contribute to achieving the project goals?
        </p>
        <div>
          <textarea
            aria-describedby="approach-hint"
            className="under-200"
            defaultValue=""
            id="approach"
            name="approach"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]} />
          <span
            className="word-count-counter">
            200 words remaining
          </span>
        </div>
      </div>
      <div
        className="field">
        <label
          htmlFor="outcome">
          What was the outcome?
        </label>
        <p
          className="hint"
          id="outcome-hint">
          List the key achievements of this project.
        </p>
        <div>
          <div
            className="list-entry row">
            <div
              className="col-xs-12 col-sm-9">
              <label
                className="text-box-number-label"
                htmlFor="outcome">
                1
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue=""
                id="outcome"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text" />
            </div>
          </div>
          <div
            className="list-entry row">
            <div
              className="col-xs-12 col-sm-9">
              <label
                className="text-box-number-label"
                htmlFor="outcome-1">
                2
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue=""
                id="outcome-1"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text" />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button">
              remove 
              <span
                className="visuallyhidden">
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button">
            Add another row
          </button>
        </div>
      </div>
      <div
        className="field">
        <label
          htmlFor="project_links">
          Project links (optional)
        </label>
        <p
          className="hint"
          id="project_links-hint">
          Link to any supporting material for your case study. This can include a case study on your  website, case study video or the live project.
        </p>
        <div>
          <div
            className="list-entry row">
            <div
              className="col-xs-12 col-sm-9">
              <label
                className="text-box-number-label"
                htmlFor="project_links">
                1
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text" />
            </div>
          </div>
          <div
            className="list-entry row">
            <div
              className="col-xs-12 col-sm-9">
              <label
                className="text-box-number-label"
                htmlFor="project_links-1">
                2
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-1"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text" />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button">
              remove 
              <span
                className="visuallyhidden">
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button">
            Add another row
          </button>
        </div>
      </div>
      <h3>
        Referee
      </h3>
      <p>
        Client referee information will only be viewed by evaluators.  It will not be published anywhere on the marketplace.
      </p>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="refereeName">
          Referee\'s name
        </label>
        <p
          className="hint"
          id="refereeName-hint">
          The full name of the best person to contact about your experience
        </p>
        <input
          aria-describedby="refereeName-hint"
          className=""
          id="refereeName"
          maxLength={undefined}
          name="refereeName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="refereeEmail">
          Referee\'s phone number
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="refereeEmail"
          maxLength={undefined}
          name="refereeEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div>
        <input
          checked={false}
          id="refereeContact"
          name="refereeContact"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox" />
        <label
          htmlFor="refereeContact">
          I acknowledge my reference gives permission to be contacted and have their information be shared within the Digtal Transformation Agency for evaluation.
        </label>
      </div>
      <input
        role="button"
        type="submit"
        value="Publish Case Study" />
    </form>
  </article>
</div>
`;

exports[`test CaseStudyForm renders with populated fields 1`] = `
<div
  className="layout">
  <header>
    <h1
      aria-describedby="header-description"
      tabIndex="-1">
      Add
       case study
    </h1>
    <p
      id="header-description">
      To be successfully evaluated, your case study must meet the 
       
      <a
        href="/evaluation-criteria"
        rel="external"
        target="_blank">
        evaluation criteria
      </a>
    </p>
  </header>
  <article
    role="main">
    <form
      action="https://httpbin.org/post"
      id="casestudy__create"
      method="post"
      onReset={[Function]}
      onSubmit={[Function]}>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="title">
          Give your case study a title
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="title"
          maxLength={undefined}
          name="title"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="client">
          Who was the client?
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="client"
          maxLength={undefined}
          name="client"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="The Client Name" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="timeframe">
          What was the time frame?
        </label>
        <p
          className="hint"
          id="timeframe-hint">
          For example,  January 2016 — June 2016
        </p>
        <input
          aria-describedby="timeframe-hint"
          className=""
          id="timeframe"
          maxLength={undefined}
          name="timeframe"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="January 2016 — June 2016" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="opportunity">
          Outline the problem or opportunity
        </label>
        <p
          className="hint"
          id="opportunity-hint">
          Describe the project goal and any relevant background information.
        </p>
        <div>
          <textarea
            aria-describedby="opportunity-hint"
            className="under-200"
            defaultValue="The opportunity"
            id="opportunity"
            name="opportunity"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]} />
          <span
            className="word-count-counter">
            198 words remaining
          </span>
        </div>
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="roles">
          What was your business responsible for?
        </label>
        <p
          className="hint"
          id="roles-hint">
          e.g. Ran whole project, engaged in discovery activites or responsible for delivery.
        </p>
        <input
          aria-describedby="roles-hint"
          className=""
          id="roles"
          maxLength={undefined}
          name="roles"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="approach">
          Describe your approach
        </label>
        <p
          className="hint"
          id="approach-hint">
          How did your capabilities and methods contribute to achieving the project goals?
        </p>
        <div>
          <textarea
            aria-describedby="approach-hint"
            className="under-200"
            defaultValue="The approach"
            id="approach"
            name="approach"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]} />
          <span
            className="word-count-counter">
            198 words remaining
          </span>
        </div>
      </div>
      <div
        className="field">
        <label
          htmlFor="outcome">
          What was the outcome?
        </label>
        <p
          className="hint"
          id="outcome-hint">
          List the key achievements of this project.
        </p>
        <div>
          <div
            className="list-entry row">
            <div
              className="col-xs-12 col-sm-9">
              <label
                className="text-box-number-label"
                htmlFor="outcome">
                1
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue="Outcome 1"
                id="outcome"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text" />
            </div>
          </div>
          <div
            className="list-entry row">
            <div
              className="col-xs-12 col-sm-9">
              <label
                className="text-box-number-label"
                htmlFor="outcome-1">
                2
                .
              </label>
              <input
                aria-describedby="outcome-hint"
                className="text-box "
                defaultValue="Outcome 2"
                id="outcome-1"
                name="outcome[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text" />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button">
              remove 
              <span
                className="visuallyhidden">
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button">
            Add another row
          </button>
        </div>
      </div>
      <div
        className="field">
        <label
          htmlFor="project_links">
          Project links (optional)
        </label>
        <p
          className="hint"
          id="project_links-hint">
          Link to any supporting material for your case study. This can include a case study on your  website, case study video or the live project.
        </p>
        <div>
          <div
            className="list-entry row">
            <div
              className="col-xs-12 col-sm-9">
              <label
                className="text-box-number-label"
                htmlFor="project_links">
                1
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text" />
            </div>
          </div>
          <div
            className="list-entry row">
            <div
              className="col-xs-12 col-sm-9">
              <label
                className="text-box-number-label"
                htmlFor="project_links-1">
                2
                .
              </label>
              <input
                aria-describedby="project_links-hint"
                className="text-box "
                defaultValue=""
                id="project_links-1"
                name="project_links[]"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text" />
            </div>
            <button
              className="button-secondary col-xs-12 col-sm-3"
              onClick={[Function]}
              type="button">
              remove 
              <span
                className="visuallyhidden">
                number 
                2
              </span>
            </button>
          </div>
          <button
            className="button-secondary"
            onClick={[Function]}
            type="button">
            Add another row
          </button>
        </div>
      </div>
      <h3>
        Referee
      </h3>
      <p>
        Client referee information will only be viewed by evaluators.  It will not be published anywhere on the marketplace.
      </p>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="refereeName">
          Referee\'s name
        </label>
        <p
          className="hint"
          id="refereeName-hint">
          The full name of the best person to contact about your experience
        </p>
        <input
          aria-describedby="refereeName-hint"
          className=""
          id="refereeName"
          maxLength={undefined}
          name="refereeName"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div
        className="field">
        <label
          className="question-heading"
          htmlFor="refereeEmail">
          Referee\'s phone number
        </label>
        <input
          aria-describedby={undefined}
          className=""
          id="refereeEmail"
          maxLength={undefined}
          name="refereeEmail"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          pattern={undefined}
          type="text"
          value="" />
      </div>
      <div>
        <input
          checked={false}
          id="refereeContact"
          name="refereeContact"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          type="checkbox" />
        <label
          htmlFor="refereeContact">
          I acknowledge my reference gives permission to be contacted and have their information be shared within the Digtal Transformation Agency for evaluation.
        </label>
      </div>
      <input
        role="button"
        type="submit"
        value="Publish Case Study" />
    </form>
  </article>
</div>
`;
